sent show and hide functionality

--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -96,10 +96,9 @@ button[disabled] {
 .float-right {
   float: right;
 }
-.criteria{
-  justify-content: space-between;
+#criteria{
+  display: none;
 }
-
 #password {
   -webkit-appearance: none;
   -moz-appearance: none;
